@@ -18,7 +18,9 @@ nn-nn-15 - Version 5.1.36
 
   - Fix for BUG#75592 (20408891), "SHOW VARIABLES WHERE" is expensive.
 
-  - Fix for Bug#75113, Fail in failover of the connection in MySQL fabric
+  - Fix for Bug#75113 (20821888), Fail in failover of the connection in MySQL fabric
+
+  - Fix for Bug#72077 (18425861), Fabric connection with username to a server with disabled auth throws NPE
 
 03-23-15 - Version 5.1.35
 
